<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:orientation="vertical">

    <TextView
            style="@style/BigTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/create_todo_title" />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_createTodo_content"
            style="@style/SubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/create_todo_hint" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_createTodo_create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/create_todo_button" />
</LinearLayout>