<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:context=".user.fragment.UserDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_userDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="12dp">

                <TextView
                        android:id="@+id/tv_userDetail_name"
                        style="@style/BigTitleText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        tools:text="Jaime Suarez"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/tv_userDetail_username"
                        style="@style/SubtitleText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="Username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_userDetail_name" />

                <TextView
                        android:id="@+id/tv_userDetail_website"
                        style="@style/CaptionText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        tools:text="website.com"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_userDetail_username" />

                <TextView
                        android:id="@+id/tv_userDetail_email"
                        style="@style/CaptionText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="start"
                        tools:text="email@email.com"
                        app:layout_constraintEnd_toStartOf="@id/tv_userDetail_company"
                        app:layout_constraintStart_toStartOf="@id/tv_userDetail_website"
                        app:layout_constraintTop_toBottomOf="@id/tv_userDetail_website" />

                <TextView
                        android:id="@+id/tv_userDetail_company"
                        style="@style/CaptionText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:gravity="end"
                        tools:text="Company Name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_userDetail_email"
                        app:layout_constraintTop_toTopOf="@id/tv_userDetail_email" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_userDetail_albums_title"
                style="@style/SectionTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:text="@string/albums"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_userDetails" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_userDetail_albums_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_userDetail_albums_title" />

        <ProgressBar
                android:id="@+id/pb_userDetail_albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/rv_userDetail_albums"
                app:layout_constraintStart_toStartOf="@id/rv_userDetail_albums"
                app:layout_constraintTop_toTopOf="@id/rv_userDetail_albums" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_userDetail_albums"
                android:layout_width="0dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_userDetail_albums_title"
                tools:itemCount="1"
                tools:listitem="@layout/item_album" />

        <TextView
                android:id="@+id/tv_userDetail_todos_title"
                style="@style/SectionTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:text="@string/todos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_userDetail_albums" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_userDetail_todos_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_userDetail_todos_title" />

        <ProgressBar
                android:id="@+id/pb_userDetail_todos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/rv_userDetail_todos"
                app:layout_constraintStart_toStartOf="@id/rv_userDetail_todos"
                app:layout_constraintTop_toTopOf="@id/rv_userDetail_todos" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_userDetail_todos"
                android:layout_width="0dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_userDetail_todos_title"
                tools:itemCount="1"
                tools:listitem="@layout/item_todo" />

        <TextView
                android:id="@+id/tv_userDetail_posts_title"
                style="@style/SectionTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:text="@string/posts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_userDetail_todos" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_userDetail_posts_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_userDetail_posts_title"/>

        <ProgressBar
                android:id="@+id/pb_userDetail_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/rv_userDetail_posts"
                app:layout_constraintStart_toStartOf="@id/rv_userDetail_posts"
                app:layout_constraintTop_toTopOf="@id/rv_userDetail_posts" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_userDetail_posts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_userDetail_posts_title"
                tools:itemCount="1"
                tools:listitem="@layout/item_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
